# NeuroFramework-ai

./: .env.template  .gitignore  .pre-commit-config.yaml  KAGGLE_WORKFLOW.md  README.md  context.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
configs/: dataset.yaml  deployment.yaml  label_maps.yaml  model.yaml  paths.yaml  preprocessing.yaml  training.yaml
core/: __init__.py  config.py  exceptions.py  interfaces.py  logging.py
data/: abide_index.json  abide_kfold.json  abide_splits.json  abide_statistics.json
datasets/: __init__.py  abide.py  abide_compiler.py  adni.py  adni_compiler.py  base.py  base_compiler.py  brats.py  brats_compiler.py  compiler.py  manager.py
deployment/: __init__.py
docs/: api.md  architecture.md  deployment.md  pipeline.md  training.md
engine/: __init__.py  audit.py  cache.py  converter.py  decorators.py  metadata.py  pipeline.py  preview.py  quality.py  reader.py  validator.py
explainability/: __init__.py  base.py  gradcam.py  integrated_gradients.py  smoothgrad.py
models/: __init__.py  base_model.py  densenet.py  factory.py  medicalnet.py  nnunet.py  pretrained.py  resnet.py
preprocessing/: __init__.py  base.py  bias.py  decorators.py  normalize.py  orientation.py  pipeline.py  quality.py  resample.py  skull_strip.py  spatial.py
reports/: __init__.py  pdf_generator.py
schemas/: __init__.py  audit.py  dataset.py  metadata.py  mri.py  prediction.py  processing.py  quality.py  report.py  validation.py
scripts/: kaggle_master.py  manual_test_ingestion.py  run_architecture_benchmark.py  run_augmentation_benchmark.py  run_final_cv.py  run_loss_benchmark.py  run_single_experiment.py  run_tta.py
tests/: test_audit.py  test_augmentations.py  test_calibration.py  (+15 more)
(+41 files in other folders)
