[project]
name = "brain-ai"
version = "0.1.0"
description = "AI-powered Structural MRI Analysis Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "monai>=1.2.0",
    "nibabel>=5.1.0",
    "SimpleITK>=2.2.0",
    "torchio>=0.18.90",
    "opencv-python>=4.7.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.22.0",
    "wandb>=0.15.0",
    "onnxruntime>=1.15.0",
    "reportlab>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "onnxscript>=0.1.0",
    "onnx>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["core", "engine", "preprocessing", "datasets", "models", "training", "explainability", "reports", "deployment", "schemas", "utils"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
